--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "he4116", email = "he4116@mci4me.at"},
 ]
-dependencies = ["streamlit>=1.45.1", "jupyter>=1.1.1", "plotly>=6.1.2"]
+dependencies = ["streamlit>=1.45.1", "jupyter>=1.1.1", "plotly>=6.1.2", "kaleido!=0.2.1.post1"]
 requires-python = "==3.13.*"
 readme = "README.md"
 license = {text = "MIT"}
